[gd_scene load_steps=6 format=3 uid="uid://cr0idesa52x2j"]

[ext_resource type="Script" path="res://Scripts/Menu.gd" id="1_jj0iw"]
[ext_resource type="AudioStream" uid="uid://bvkv4jlq3n4uh" path="res://Assets/Sound/buttonClickMenu.mp3" id="2_cqpwo"]
[ext_resource type="AudioStream" uid="uid://bmycf5chu8wwe" path="res://Assets/Sound/MenuMusic.mp3" id="3_xdsrt"]
[ext_resource type="Texture2D" uid="uid://bn11mtcictbpb" path="res://Assets/Images/placeholder main menu Image.jpg" id="4_calid"]
[ext_resource type="PackedScene" uid="uid://dn6ueip6lwwov" path="res://Scenes/settings_menu.tscn" id="5_1k1p8"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_jj0iw")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
top_level = true
layout_mode = 0
offset_top = 544.0
offset_right = 138.0
offset_bottom = 647.0

[node name="ButtonStart" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../ButtonQuit")
focus_neighbor_bottom = NodePath("../ButtonOptions")
text = "Start Game"

[node name="ButtonOptions" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../ButtonStart")
focus_neighbor_bottom = NodePath("../ButtonQuit")
text = "Options"

[node name="ButtonQuit" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../ButtonOptions")
focus_neighbor_bottom = NodePath("../ButtonStart")
text = "Quit"

[node name="ButtonSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_cqpwo")
volume_db = -13.187

[node name="MusicMenu" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_xdsrt")
volume_db = -20.613

[node name="PlaceholderMainMenuImage" type="Sprite2D" parent="."]
position = Vector2(576, 322.75)
scale = Vector2(0.450781, 0.446181)
texture = ExtResource("4_calid")

[node name="SettingsMenu" parent="." instance=ExtResource("5_1k1p8")]

[connection signal="pressed" from="VBoxContainer/ButtonStart" to="." method="_on_button_start_pressed"]
[connection signal="pressed" from="VBoxContainer/ButtonOptions" to="." method="_on_button_options_pressed"]
[connection signal="pressed" from="VBoxContainer/ButtonQuit" to="." method="_on_button_quit_pressed"]
